docs/src/styles/components/_btn.scss
/* ==========================================================================
   #BUTTONS
   ========================================================================== */

/**
 * This is an example component. Extend inuitcss by building your own components
 * that make up your UI. Component classes are prefixed with a `c-`.
 */

/**
 * 1. Allow us to style box model properties.
 * 2. Line different sized buttons up a little nicer.
 * 3. Make buttons inherit font styles (often necessary when styling `input`s as
 *    buttons).
 * 4. Reset/normalize some styles.
 * 5. Force all button-styled elements to appear clickable.
 */

.c-btn {
  display: inline-block; /* [1] */
  vertical-align: middle; /* [2] */
  font: inherit; /* [3] */
  text-align: center; /* [4] */
  margin: 0; /* [4] */
  text-decoration: none; /* [4] */
  cursor: pointer; /* [5] */
  transition: $global-transition;
  border-radius: $global-radius;
  line-height: 1.375;
  font-size: 1.6rem;
  padding: 1.4rem;

  @include bp('small') {
    padding: 1.4rem 3.1rem;
  }
}

/* Style variants
   ========================================================================== */

.c-btn--primary {
  background-color: $color-secondary;

  &,
  &:hover,
  &:active,
  &:focus {
    color: $color-white;
  }

  &:hover,
  &:focus {
    background-color: $color-primary;
  }
}

.c-btn--secondary {
  background-color: $color-white;
  border: 1px solid $color-secondary;

  &,
  &:hover,
  &:active,
  &:focus {
    color: $color-primary;
  }

  &:hover,
  &:focus {
    background-color: $color-primary;
    border-color: $color-primary;
    color: $color-white;
  }
}

.c-btn--video {
  background-color: transparent;
  padding: 0;
  height: 100%;
  width: 100%;
  border: none;
  display: flex;
  align-items: center;
  justify-content: center;

  &.loading {
    &::before {
      animation: o-pulse-circle 1s infinite cubic-bezier(0.4, 0, 0.2, 1);
    }
  }
}

.c-menu-button {
  position: absolute;
  top: 6.6rem;
  left: calc(100% - 1px);
  height: 26px;
  width: 29px;
  padding: 2rem;
  color: $color-primary;
  cursor: pointer;
  background-color: $color-white;
  border: 1px solid;
  pointer-events: all !important;

  @include bp('large') {
    display: none;
  }

  .c-sidebar--active & {
    left: auto;
    right: 2rem;
  }
}

.c-menu-button-bar {
  display: block;
  position: absolute;
  top: 50%;
  margin-top: -1px;
  width: 30px;
  height: 4px;
  border-radius: 4px;
  background-color: $color-primary;
  transition: all 0.3s ease;
  transform: translateX(-50%);
  left: 50%;

  &.c-menu-button-bar--top {
    transform: translate(-50%, -8px);
  }

  &.c-menu-button-bar--bottom {
    transform: translate(-50%, 8px);
  }

  .c-sidebar--active & {
    background-color: $color-secondary;

    &.c-menu-button-bar--top {
      transform: translate(-50%, 0) rotate(45deg);
    }

    &.c-menu-button-bar--middle {
      opacity: 0;
    }

    &.c-menu-button-bar--bottom {
      transform: translate(-50%, 0) rotate(-45deg);
    }
  }

  .c-menu-button:hover & {
    background-color: $color-secondary;
  }
}

/* Size variants
   ========================================================================== */

.c-btn--small {
  padding: 0.25rem 0.5rem;
}

.c-btn--large {
  padding: 0.75rem 1.5rem;
}

